--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html:
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,7 +9,8 @@ index.html:
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #E6E6FA; /* Morado claro */
-            color: #000080; /* Azul marino */
+            color: #000000; /* Negro */
+            font-size: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
