--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <h1>Hola mundo</h1>
         <p>Soy Renata Sofía Guccione Núñez, tengo 18 años y estudio Administración de Negocios en la Universidad Católica San Pablo. Toco el piano y hablo inglés y francés, me gusta leer y formo parte de una ONG de nombre Atmosphera.</p>
-         <img src="https://github.com/Renata-Guccione/Renata-Guccione.github.io/blob/main/AR500570.jpg" alt="Me gustan los animales, leer y disfruto ser voluntaria">
+         <img src="https://github.com/Renata-Guccione/Renata-Guccione.github.io/blob/main/AR500570.jpg?raw=true" alt="Me gustan los animales y disfruto ser voluntaria">
     </div>
 </body>
 </html>
