--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             color: #000000; /* Negro */
             font-size: 20px;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -21,13 +22,18 @@
         .container {
             max-width: 600px;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Hola mundo</h1>
         <p>Soy Renata Sofía Guccione Núñez, tengo 18 años y estudio Administración de Negocios en la Universidad Católica San Pablo. Toco el piano y hablo inglés y francés, me gusta leer y formo parte de una ONG de nombre Atmosphera.</p>
-         <img src="https://github.com/Renata-Guccione/Renata-Guccione.github.io/blob/main/AR500570.jpg?raw=true" alt="Me gustan los animales y disfruto ser voluntaria">
+        <img src="" alt="Descripción de la imagen">
     </div>
 </body>
 </html>
+
