--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             max-width: 600px;
         }
         img {
-            max-width: 100%;
-            height: auto;
+            width: 300px; /* Ancho de 300 píxeles */
+            height: auto; /* Ajustar altura automáticamente */
         }
     </style>
 </head>
@@ -32,8 +32,7 @@
     <div class="container">
         <h1>Hola mundo</h1>
         <p>Soy Renata Sofía Guccione Núñez, tengo 18 años y estudio Administración de Negocios en la Universidad Católica San Pablo. Toco el piano y hablo inglés y francés, me gusta leer y formo parte de una ONG de nombre Atmosphera.</p>
-        <img src="https://github.com/Renata-Guccione/Renata-Guccione.github.io/blob/main/AR500570.jpg?raw=true" alt="Me gustan los animales y disfruto mucho ser voluntaria">
+        <img src="URL_DE_TU_IMAGEN" alt="Descripción de la imagen">
     </div>
 </body>
 </html>
-
